--- a/Countries/src/main/resources/templates/country-details.html
+++ b/Countries/src/main/resources/templates/country-details.html
@@ -52,7 +52,7 @@
 
     <input type="hidden" name="routeId" id="routeId">   
     <div class="details-main">
-        <section class="route-info text-center">
+        <section class="country-info text-center">
             <h4 id="track-name"></h4>
             <p>Total distance: <span id="totalDistance"></span> km</p>
             <p>Author name: <span id="authorName"></span></p>
@@ -89,9 +89,9 @@
             <iframe id="frame" src="https://www.youtube.com/embed/">
             </iframe>
         </section>
-        <section class="route-description text-center">
+        <section class="country-description text-center">
             <h4>Description:</h4>
-            <p id="route-description">Description: </p>
+            <p id="country-description">Description: </p>
         </section>
         <section class="gallery">
             <img class="rounded" src="/images/pic4.jpg" height="100%" alt="">
