--- a/Countries/src/main/resources/templates/add-country.html
+++ b/Countries/src/main/resources/templates/add-country.html
@@ -52,7 +52,7 @@
 
 <!-- Top Container -->
 <div class="row justify-content-center ">
-    <form id="add-route-form" class="w-50 rounded text-white mt-5"
+    <form id="add-country-form" class="w-50 rounded text-white mt-5"
           action="/" 
           method="/" enctype="multipart/form-data">
 
