--- a/Countries/src/main/resources/templates/country-details.html
+++ b/Countries/src/main/resources/templates/country-details.html
@@ -19,36 +19,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <header>
-    <nav class="main-nav">
-        <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/">Login</a>
-                </li>
-                <li>
-                    <a href="/">Register</a>
-                </li>
-                <li>
-                    <a href="/">About</a>
-                </li>
-				<li>
-                    <a href="/">Add new country</a>
-                </li>
-                <li>
-                    <a href="/">Profile</a>
-                </li>
-                <li>
-                    <a href="/">Admin</a>
-                </li>
-                <li>
-                    <a href="/">Logout</a>
-                </li>
-        </ul>
-    </nav>
-</header>
+    <div th:replace="~{fragments/navbar::navbar}"></div>
 
     <input type="hidden" name="routeId" id="routeId">   
     <div class="details-main">
