--- a/Countries/src/main/resources/templates/car.html
+++ b/Countries/src/main/resources/templates/car.html
@@ -20,36 +20,7 @@
 <body>
 <div class="wrapper">
     <!-- Navigation -->
-<header>
-    <nav class="main-nav">
-        <ul>
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="/">Login</a>
-                </li>
-                <li>
-                    <a href="/">Register</a>
-                </li>
-                <li>
-                    <a href="/">About</a>
-                </li>
-				<li>
-                    <a href="/">Add new country</a>
-                </li>
-                <li>
-                    <a href="/">Profile</a>
-                </li>
-                <li>
-                    <a href="/">Admin</a>
-                </li>
-                <li>
-                    <a href="/">Logout</a>
-                </li>
-        </ul>
-    </nav>
-</header>
+    <div th:replace="~{fragments/navbar::navbar}"></div>
 
     <section class="road">
         <div>
