Spring Security; Register page(GET; POST); Login page(Post)

--- a/Countries/src/main/resources/templates/login.html
+++ b/Countries/src/main/resources/templates/login.html
@@ -24,16 +24,20 @@
         <div class="row g-3 align-items-center">
 
             <form
-                    action="/"
-                    method="">
+                    th:action="@{/users/login}"
+                    th:method="POST"
+                    th:object="${loginData}"
+            >
+                <div class="bg-danger" th:if="${showErrorMessage}" th:text="'Invalid username or password'"></div>
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
                         <input type="text"
+                               th:field="*{username}"
                                name="username"
-                               required minlength="4" maxlength="20"
+
                                id="inputUsername"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
@@ -45,8 +49,8 @@
                     </div>
                     <div class="col-auto">
                         <input type="password"
+                               th:field="*{password}"
                                name="password"
-                               required minlength="4" maxlength="20"
                                id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
                     </div>
