--- a/Countries/src/main/resources/templates/register.html
+++ b/Countries/src/main/resources/templates/register.html
@@ -23,25 +23,27 @@
     <div class="d-flex justify-content-center ">
         <div class="row g-3">
             <form
-                    action="/"
-                    method="">
+                    th:object="${registerData}"
+                    th:action="@{/users/register}"
+                    th:method="POST">
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
-                        <input name="username"
-                               
-                               required minlength="5" maxlength="20"
-                               type="text"
-                               id="inputUsername"
-                               class="form-control"
-                               aria-describedby="usernameHelpInline">
-                        <small id="usernameError"
-                               class="invalid-feedback bg-danger rounded">Username length must be more than 3 characters</small>
+                        <input
+                                th:field="*{username}"
+                                th:errorclass="is-invalid"
+                                name="username"
+                                type="text"
+                                id="inputUsername"
+                                class="form-control"
+                                aria-describedby="usernameHelpInline">
+                        <small th:errors="*{username}" id="usernameUniqueError"
+                               class=" bg-danger text-white rounded">Username is already occupied</small>
 
-                        <small id="usernameUniqueError"
-                               class=" bg-danger rounded">Username is already occupied</small>
+                        <!--                        <small th:if="${#fields.hasErrors('username')}" id="usernameUniqueError"-->
+                        <!--                               class=" bg-danger rounded">Username is already occupied</small>-->
 
                     </div>
                 </div>
@@ -51,14 +53,16 @@
                         <label for="inputFullName" class="col-form-label ">Full Name</label>
                     </div>
                     <div class="col-auto">
-                        <input name="fullname"
-                               required minlength="5" maxlength="20"
-                               type="text"
-                               id="inputFullName"
-                               class="form-control"
-                               aria-describedby="fullNameHelpInline">
-                        <small id="fullNameError"
-                               class="invalid-feedback  form-text bg-danger rounded">Full name length must be more than 3 characters</small>
+                        <input
+                                th:field="*{fullName}"
+                                th:errorclass="is-invalid"
+                                name="fullname"
+                                type="text"
+                                id="inputFullName"
+                                class="form-control"
+                                aria-describedby="fullNameHelpInline">
+                        <small th:errors="*{fullName}" id="fullNameError"
+                               class=" bg-danger text-white rounded">Username is already occupied</small>
                     </div>
                 </div>
 
@@ -67,14 +71,17 @@
                         <label for="inputEmail" class="col-form-label ">Email</label>
                     </div>
                     <div class="col-auto">
-                        <input name="email"
-								required
-                               type="email"
-                               id="inputEmail"
-                               class="form-control"
-                               aria-describedby="emailHelpInline">
-                        <small id="emailError"
-                               class="invalid-feedback  form-text bg-danger rounded">Must be valid email</small>
+                        <input
+                                th:field="*{email}"
+                                th:errorclass="is-invalid"
+                                name="email"
+                                required
+                                type="email"
+                                id="inputEmail"
+                                class="form-control"
+                                aria-describedby="emailHelpInline">
+                        <small th:errors="*{email}" id="emailError"
+                               class="invalid-feedback form-text bg-danger text-white rounded">Must be valid email</small>
                     </div>
                 </div>
                 <div>
@@ -82,14 +89,33 @@
                         <label for="inputAge" class="col-form-label ">Age</label>
                     </div>
                     <div class="col-auto">
-                        <input name="age" required
-                               type="number"
-                               id="inputAge"
-                               class="form-control"
-                               min="0" max="90"
-                               aria-describedby="ageHelpInline">
-                        <small id="ageError"
-                               class="invalid-feedback  form-text bg-danger rounded">Must be valid age</small>
+                        <input
+                                th:field="*{age}"
+                                th:errorclass="is-invalid"
+                                name="age" required
+                                type="number"
+                                id="inputAge"
+                                class="form-control"
+                                min="0" max="90"
+                                aria-describedby="ageHelpInline">
+                        <small th:errors="*{age}" id="ageError"
+                               class="invalid-feedback text-white form-text bg-danger rounded">Must be valid age</small>
+                    </div>
+                </div>
+                <div>
+                    <div class="col-auto">
+                        <label for="selectLevel" class="col-form-label ">Level</label>
+                    </div>
+                    <div class="col-auto">
+                        <select
+                                th:field="*{level}"
+
+                                name="level" required
+                                type="number"
+                                id="selectLevel"
+                                class="form-control">
+                            <option th:each="levelOption: ${levels}" th:value="${levelOption}" th:text="${levelOption}"></option>
+                        </select>
                     </div>
                 </div>
                 <div>
@@ -97,13 +123,15 @@
                         <label for="inputPassword" class="col-form-label ">Password</label>
                     </div>
                     <div class="col-auto">
-                        <input name="password"
-                                required minlength="5" maxlength="20"
-                               type="password"
-                               id="inputPassword"
-                               class="form-control"
-                               aria-describedby="passwordHelpInline">
-                        <small id="passwordError"
+                        <input
+                                th:field="*{password}"
+                                th:errorclass="is-invalid"
+                                name="password"
+                                type="password"
+                                id="inputPassword"
+                                class="form-control"
+                                aria-describedby="passwordHelpInline">
+                        <small id="passwordError1"
                                class="invalid-feedback  form-text bg-danger rounded">
                             Password length must be between 5 and 20 characters and passwords should match.
                         </small>
@@ -115,14 +143,16 @@
                         <label for="inputConfirmPassword" class="col-form-label ">Confirm Password</label>
                     </div>
                     <div class="col-auto">
-                        <input name="confirmPassword"
-                                required minlength="5" maxlength="20"
-                               type="password"
-                               id="inputConfirmPassword"
-                               class="form-control"
-                               aria-describedby="confirmPasswordHelpInline">
-                        <small id="confirmPasswordError"
-                               class="invalid-feedback  form-text bg-danger rounded">
+                        <input
+                                th:field="*{confirmPassword}"
+                                th:errorclass="is-invalid"
+                                name="confirmPassword"
+                                type="password"
+                                id="inputConfirmPassword"
+                                class="form-control"
+                                aria-describedby="confirmPasswordHelpInline">
+                        <small th:errors="*{password}" id="passwordError"
+                               class="invalid-feedback text-white form-text bg-danger rounded">
                             Password length must be between 5 and 20 characters and passwords should match.
                         </small>
                     </div>
