--- a/Countries/src/main/resources/templates/fragments/navbar.html
+++ b/Countries/src/main/resources/templates/fragments/navbar.html
@@ -1,30 +1,65 @@
-<header th:fragment="navbar">
-    <nav class="main-nav">
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/">Login</a>
-            </li>
-            <li>
-                <a href="/">Register</a>
-            </li>
-            <li>
-                <a href="/">About</a>
-            </li>
-            <li>
-                <a href="/">Add new country</a>
-            </li>
-            <li>
-                <a href="/">Profile</a>
-            </li>
-            <li>
-                <a href="/">Admin</a>
-            </li>
-            <li>
-                <a href="/">Logout</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Pathfinder</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/mobile.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+            integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+            crossorigin=""></script>
+</head>
+<body>
+<div class="wrapper"  th:fragment="navbar">
+    <!-- Navigation -->
+    <header>
+        <nav class="main-nav">
+            <ul>
+                <li sec:authorize="!isAuthenticated()">
+                    <a th:href="@{/}">Home</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()">
+                    <a th:href="@{/users/login}">Login</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()">
+                    <a th:href="@{users/register}">Register</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()">
+                    <a th:href="@{/about}">About</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a th:href="@{/add-route}">Add new route</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a th:href="@{/users/profile}">Profile</a>
+                </li>
+                <li sec:authorize="hasRole('ADMIN')">
+                    <a th:href="@{/}">Admin</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <form
+                            th:method="POST"
+                            th:action="@{/users/logout}"
+                    >
+                        <button type="submit" >Logout</button>
+                    </form>
+
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Top Container -->
+
+</div>
+<!-- Wrapper Ends -->'
+</body>
+
+</html>
