--- a/Countries/src/main/resources/templates/countries.html
+++ b/Countries/src/main/resources/templates/countries.html
@@ -23,13 +23,13 @@
     <div th:replace="~{fragments/navbar::navbar}"></div>
 
     <section class="road">
-        <img src="/images/pic4.jpg" alt="Title image">
-        <div>
-            <h2>Your Route</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae alias reiciendis deleniti possimus nemo
-                non repellendus?
-                Quae atque vero modi quidem! Autem cupiditate fugit doloribus ad amet, asperiores provident commodi.</p>
-            <a href="/" class="btn">Learn More</a>
+        <div th:each="singleCountry : ${allCountries}">
+            <img th:src="${singleCountry.imageUrl}" alt="Title image">
+            <div>
+                <h2 th:text="${singleCountry.name}">Your Route</h2>
+                <p th:text="${singleCountry.description}"></p>
+                <a th:href="@{/country/{id} (id=${singleCountry.id})}" class="btn">Learn More</a>
+            </div>
         </div>
     </section>
 </div>
