--- a/Countries/src/main/resources/templates/fragments/navbar.html
+++ b/Countries/src/main/resources/templates/fragments/navbar.html
@@ -36,7 +36,7 @@
                     <a th:href="@{/about}">About</a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                    <a th:href="@{/add-route}">Add new route</a>
+                    <a th:href="@{/add-country}">Add new country</a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
                     <a th:href="@{/users/profile}">Profile</a>
