Get add-country

--- a/Countries/src/main/resources/templates/index.html
+++ b/Countries/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
         <div class="showcase">
             <h1>Find amazing countries</h1>
             <p>Sick of staying at home, sick of limitations? Be free! Find a country and enjoy the travel!</p>
-            <a href="/routes" class="btn">To countries</a>
+            <a th:href="@{/countries}" class="btn">To countries</a>
         </div>
         <div class="top-box top-box-a">
             <h4>Weather in New York</h4>
