--- a/Countries/src/main/resources/templates/add-country.html
+++ b/Countries/src/main/resources/templates/add-country.html
@@ -23,9 +23,13 @@
 
 <!-- Top Container -->
 <div class="row justify-content-center ">
-    <form id="add-country-form" class="w-50 rounded text-white mt-5"
-          action="/" 
-          method="/" enctype="multipart/form-data">
+    <form id="add-route-form"
+          class="w-50 rounded text-white mt-5"
+          th:action="@{/add-country}"
+          th:method="POST"
+          th:object="${countryData}"
+          enctype="multipart/form-data"
+    >
 
         <h3 class="border-left border-light pl-2">Add a new country</h3>
         <div>
@@ -33,12 +37,14 @@
                 <label for="inputName" class="col-form-label ">Name</label>
             </div>
             <div class="form-group">
-                <input name="name" 
+                <input name="name"
                        required minlength="5" maxlength="20"
                        type="text"
                        id="inputName"
                        class="form-control"
-                       aria-describedby="inputNameError">
+                       aria-describedby="inputNameError"
+                       th:field="*{name}"
+                >
                 <small id="inputNameError"
                        class="invalid-feedback bg-danger rounded">Name length must be more than 3 characters</small>
 
@@ -50,11 +56,13 @@
                 <label for="inputDescription" class="col-form-label ">Description</label>
             </div>
             <div class="form-group">
-                    <textarea name="description" 
+                    <textarea name="description"
                               required minlength="5"
                               id="inputDescription"
                               class="form-control"
-                              aria-describedby="inputDescriptionError"></textarea>
+                              aria-describedby="inputDescriptionError"
+                              th:field="*{description}"
+                    ></textarea>
                 <small id="inputDescriptionError"
                        class="invalid-feedback  form-text bg-danger rounded">Description length must be more than 5
                     characters</small>
@@ -66,8 +74,9 @@
                 <label for="inputGpx" class="col-form-label ">GPX Coordinates</label>
             </div>
             <div class="form-group">
-                <input type="file" name="gpxCoordinates"
-					   required
+                <input type="file"
+                       name="gpxCoordinates"
+                       required
                        id="inputGpx"
                        class="form-control-file"
                        aria-describedby="inputGpxError">
@@ -78,9 +87,10 @@
         <div>
             <div class="form-group">
                 <label for="level">Level</label>
-                <select id="level" class="custom-select">
-                    <option value="" selected>Select level</option>
-                    <option value="1" text="ADVANCED">Select level</option>
+                <select id="level" class="custom-select"
+                        th:field="*{level}"
+                >
+                    <option th:each="level: ${levels}" th:value="${level}" th:text="${level}"></option>
                 </select>
             </div>
         </div>
@@ -89,16 +99,21 @@
             <div class="form-group">
                 <label for="videoUrl">Video Url (only last eleven characters from Youtube)</label>
                 <input id="videoUrl" type="text"
-                       class="form-control" placeholder="Video url">
+                       class="form-control" placeholder="Video url"
+                       th:field="*{videoUrl}"
+                >
             </div>
         </div>
 
         <div>
             <div class="form-group p-3">
                 <label class="p-2" for="categories">Categories:</label>
-                <input class="m-3" type="checkbox" name="categories" id="categories"
-                       value="1" text="Category">
-				<br>
+                <input th:each="category: ${categoryTypes}" class="m-3"
+                       type="checkbox"
+                       name="categories"
+                       id="categories"
+                       th:value="category" th:text="${category}">
+                <br>
             </div>
         </div>
 
