--- a/Countries/src/main/resources/templates/country-details.html
+++ b/Countries/src/main/resources/templates/country-details.html
@@ -21,23 +21,26 @@
 <div class="wrapper">
     <div th:replace="~{fragments/navbar::navbar}"></div>
 
-    <input type="hidden" name="routeId" id="routeId">   
+    <input type="hidden" name="countryId" id="countryId">
     <div class="details-main">
-        <section class="country-info text-center">
-            <h4 id="track-name"></h4>
+        <section class="route-info text-center">
+            <h4 th:text="${country.name}" id="track-name"></h4>
             <p>Total distance: <span id="totalDistance"></span> km</p>
-            <p>Author name: <span id="authorName"></span></p>
-            <h4>Difficulty Level (1-3):</h4>
+            <p>Author name: <span th:text="${country.authorName}" id="authorName"></span></p>
+            <h4 th:text="${country.level}">Difficulty Level (1-3):</h4>
             <div class="level">
                 <p><img class="level-img" src="/images/difficulty-level.png" alt=""></p>
                 <p><img class="level-img" src="/images/difficulty-level.png" alt=""></p>
                 <p><img class="level-img" src="/images/difficulty-level.png" alt=""></p>
-                
+
             </div>
             <div>
                 <h4>Choose picture</h4>
-                <form action="/" method="POST" enctype="multipart/form-data">
-                    <input  type="hidden" id="id" name="routeId">
+                <form th:action="@{/picture/upload-picture}"
+                      th:method="POST"
+                      enctype="multipart/form-data"
+                >
+                    <input type="hidden" id="id" name="routeId" th:value="${country.id}">
                     <div class="form-group">
                         <label>
                             <input type="text" name="title">
@@ -57,45 +60,59 @@
         </section>
         <section id="map"></section>
         <section id="video">
-            <iframe id="frame" src="https://www.youtube.com/embed/">
+            <iframe id="frame" th:src="${country.videoUrl}">
             </iframe>
         </section>
-        <section class="country-description text-center">
+        <section class="route-description text-center">
             <h4>Description:</h4>
-            <p id="country-description">Description: </p>
+            <p th:text="${country.description}" id="route-description">Description: </p>
         </section>
         <section class="gallery">
-            <img class="rounded" src="/images/pic4.jpg" height="100%" alt="">
-            <img class="rounded" src="/images/pic1.jpg" height="100%" alt="">
+            <img th:each="image: ${country.imageUrls}" class="rounded" th:src="${image}" height="100%" alt="">
+            <!--            <img class="rounded" src="/images/pic1.jpg" height="100%" alt="">-->
         </section>
         <section class="comments">
             <h1>Comments</h1>
+            <div id="comments">
+                <div class="form-group" th:each="comment : ${country.comments}">
+                    <h4 th:text="${comment.content}">Comment</h4>
+                    <label th:text="${comment.authorName}">Author</label>
+
+                    <form th:action="@{/comments/delete/{countryId}/{id} (id=${comment.id}, countryId=${country.id})}"
+                          th:method="POST">
+                        <button type="submit" class="btn btn-danger" th:text="Delete"></button>
+                    </form>
+                </div>
+            </div>
+
 
             <div>
                 <!-- Comments submission -->
-                <form id="commentForm" method="POST"
-                      action="/">
-                    <div class="form-group">
-                        <h4>Leave a comment</h4>
-                        <label for="message">Message</label>
-                        <textarea name="message"
-                                  id="message"
-                                  cols="30"
-                                  rows="5"
-                                  class="form-control"
-                                  style="background-color: white;"></textarea>
-                        <small id="messageError" class="invalid-feedback">
-                            Message should be at least 10 characters.
-                        </small>
-                    </div>
+                <!--                <form id="commentForm"-->
+                <!--                      th:method="POST"-->
+                <!--                      th:action="@{/comments/create}">-->
+                <div class="form-group">
+                    <input type="hidden" name="routeId" id="routeId" th:value="${country.id}">
+                    <h4>Leave a comment</h4>
+                    <label for="message">Message</label>
+                    <textarea name="message"
+                              id="message"
+                              cols="30"
+                              rows="5"
+                              class="form-control"
+                              style="background-color: white;"></textarea>
+                    <small id="messageError" class="invalid-feedback">
+                        Message should be at least 10 characters.
+                    </small>
+                </div>
 
-                    <div class="form-group">
-                        <input type="submit"
-                               class="btn"
-                               id="postComment"
-                               value="Post Comment"/>
-                    </div>
-                </form>
+                <div class="form-group">
+                    <input type="submit"
+                           class="btn"
+                           id="postComment"
+                           value="Post Comment"/>
+                </div>
+                <!--                </form>-->
                 <!-- Comments submission -->
             </div>
 
