--- a/Countries/src/main/resources/templates/index.html
+++ b/Countries/src/main/resources/templates/index.html
@@ -42,28 +42,28 @@
 
     <!-- Boxes Section -->
     <section class="boxes">
-        <a href="/" class="main-btn" >
+        <a th:href="@{/countries/PLANE}" class="main-btn">
             <div class="box">
                 <img src="/images/plane.png" height="150px" alt="">
                 <h3>Plane</h3>
-                <p>Is this your day for flying ?</p>
+                <p>Is this your flying day?</p>
             </div>
         </a>
-        <a href="/" class="main-btn" >
+        <a th:href="@{/countries/SHIP}" class="main-btn">
             <div class="box">
                 <img src="/images/ship.png" height="150px" alt="">
                 <h3>Ship</h3>
-                <p>When you want to be one with sea!</p>
+                <p>When you want to be one with the sea!</p>
             </div>
         </a>
-        <a href="/" class="main-btn" >
+        <a th:href="@{/countries/MOTORCYCLE}" class="main-btn">
             <div class="box">
                 <img src="/images/motorcycle.png" height="150px" alt="">
                 <h3>Motorcycle</h3>
                 <p>When you want the wind to blow on your face!</p>
             </div>
         </a>
-        <a href="/" class="main-btn" >
+        <a th:href="@{/countries/CAR}" class="main-btn">
             <div class="box">
                 <img src="/images/car.png" height="150px" alt="">
                 <h3>Car</h3>
