--- a/Countries/src/main/resources/templates/index.html
+++ b/Countries/src/main/resources/templates/index.html
@@ -74,12 +74,12 @@
 
     <!-- Info Section -->
     <section class="road">
-        <img src="/images/most-commented.jpg" alt="">
+        <img th:src="${commentedCountry.imageUrl}" alt="">
         <div>
-            <h2>The most commented country</h2>
-            <p>Read more about the most commented country and do not miss the
+            <h2 th:text="${commentedCountry.name}">The most commented country</h2>
+            <p th:text="${commentedCountry.description}">Read more about the most commented country and do not miss the
                 chance to visit it and give your opinion to help other users.</p>
-            <a href="/" class="btn">Learn More</a>
+            <a th:href="@{/country/{id}(id=${commentedCountry.id})}" class="btn">Learn More</a>
         </div>
     </section>
 
