--- a/Countries/src/main/resources/templates/country-details.html
+++ b/Countries/src/main/resources/templates/country-details.html
@@ -135,7 +135,7 @@
 <footer class="footer bg-blur rounded">
     <div class="container-fluid text-center">
         <div class="h5 text-white">
-            &copy; Lucho, Chocho & Spring Advanced Students 2021. All rights reserved.
+            &copy;  Aleksandar SofUni Project; All rights reserved.
         </div>
     </div>
 </footer>
