--- a/Countries/src/main/resources/templates/add-country.html
+++ b/Countries/src/main/resources/templates/add-country.html
@@ -99,7 +99,7 @@
             <div class="form-group">
                 <label for="videoUrl">Video Url (only last eleven characters from Youtube)</label>
                 <input id="videoUrl" type="text"
-                       class="form-control" placeholder="Video url"
+                       class="form-control" placeholder="Video imageUrl"
                        th:field="*{videoUrl}"
                 >
             </div>
