--- a/Countries/src/main/resources/templates/add-country.html
+++ b/Countries/src/main/resources/templates/add-country.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="d-flex justify-content-center mt-4">
-            <button class="btn btn-primary btn-block w-50" type="submit">Add Route</button>
+            <button class="btn btn-primary btn-block w-50" type="submit">Add Country</button>
         </div>
 
     </form>
